zokrates_cli/examples/compile_errors/out_of_for_scope.zok
def main() -> field:
	for u32 i in 0..5 do
	endfor
	return i